# sellarts_V5

./: .gitignore  README.md  dkzjkdbjz  docker-compose.yml  package-lock.json  package.json
.github/workflows/: main.yml
sell-arts-backend/: pom2.xml
sell-arts-backend-3/: Dockerfile
sell-arts-dj-api/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml  pytest.ini  test.html  test.py
sell-arts-dj-api/api/: execute 2.py  execute.py  execute3.py  tarif_dict_output.py  update_users_infos.py
sell-arts-dj-api/api/anka/: apps.py  fees.py  models.py  mutations.py  order_confirmation.html  queries.py  schema.py  tests.py  types.py  views.py
sell-arts-dj-api/api/api/: env.py  schema.py  settings.py  urls.py
sell-arts-dj-api/api/artwork/: meta.py  models.py  mutations.py  schema.py  types.py
sell-arts-dj-api/api/chat/: meta.py  models.py  mutations.py  queries.py  schema.py  tests.py  types.py
sell-arts-dj-api/api/event/: meta.py  models.py  mutations.py  schema.py  types.py
sell-arts-dj-api/api/order/: meta.py  models.py  mutations.py  schema.py  types.py
sell-arts-dj-api/api/templates/: order_confirmation.html  shipping_notification.html
sell-arts-dj-api/api/users/: meta.py  mutations.py  schema.py  types.py
sell-arts-ui/: components.json  cypress.config.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts
sell-arts-ui-2/: Dockerfile  cypress.config.ts  package.json
sell-arts-ui-2/.github/workflows/: main.yml
sell-arts-ui-2/messages/: en.json
sell-arts-ui-2/src/: middleware.ts
sell-arts-ui/messages/: en.json  fr.json
(+513 files in other folders)
